[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frc"
version = "0.1.0"
description = "Single-image FRC split helpers"
readme = "FRC_README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[tool.setuptools]
packages = ["frc"]
